# django-cadastro

./: .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py
modules/bairro/: apps.py  models.py  serializers.py  urls.py  views.py
modules/bairro/migrations/: 0001_initial.py
modules/edificacao/: apps.py  models.py  serializers.py  urls.py  views.py
modules/edificacao/migrations/: 0001_initial.py
modules/imobiliario/: apps.py  models.py  serializers.py  urls.py  views.py
modules/imobiliario/migrations/: 0001_initial.py
modules/logradouro/: apps.py  models.py  serializers.py  urls.py  views.py
modules/logradouro/migrations/: 0001_initial.py
modules/lote/: apps.py  models.py  serializers.py  urls.py  views.py
modules/lote/migrations/: 0001_initial.py
modules/pessoa/: apps.py  models.py  serializers.py  urls.py  views.py
modules/pessoa/migrations/: 0001_initial.py
modules/quadra/: apps.py  models.py  serializers.py  urls.py  views.py
modules/quadra/migrations/: 0001_initial.py
modules/setor/: apps.py  models.py  serializers.py  urls.py  views.py
modules/setor/migrations/: 0001_initial.py
modules/zoneamento/: apps.py  models.py  serializers.py  urls.py  views.py
modules/zoneamento/migrations/: 0001_initial.py
utils/serializers/: geom_serializer.py
